[gd_scene load_steps=11 format=2]

[ext_resource path="res://forklift/ramp_tiles.tres" type="TileSet" id=1]
[ext_resource path="res://forklift/crane.gd" type="Script" id=2]
[ext_resource path="res://forklift/grabber_bar.png" type="Texture" id=3]
[ext_resource path="res://forklift/pincer.png" type="Texture" id=4]
[ext_resource path="res://forklift/crane_hoist.tscn" type="PackedScene" id=5]
[ext_resource path="res://forklift/chain.tscn" type="PackedScene" id=6]
[ext_resource path="res://forklift/box.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18, 4 )

[sub_resource type="PhysicsMaterial" id=2]
friction = 10.0
absorbent = true

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 8 )

[node name="Node2D" type="Node2D"]
position = Vector2( 141, 127 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -262151, 19, 0, -262150, 17, 0, -262149, 17, 0, -262148, 17, 0, -262147, 17, 0, -262146, 17, 0, -262145, 17, 0, -327680, 17, 0, -327679, 17, 0, -327678, 17, 0, -327677, 17, 0, -327676, 17, 0, -327675, 17, 0, -327674, 17, 0, -327673, 17, 0, -327672, 21, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0 )

[node name="grabber" type="RigidBody2D" parent="."]
position = Vector2( 0, 91 )
collision_mask = 18
mass = 0.5
can_sleep = false
linear_damp = 0.1
angular_damp = 0.1
script = ExtResource( 2 )

[node name="bar_shape" type="CollisionShape2D" parent="grabber"]
shape = SubResource( 1 )

[node name="grabber_bar" type="Sprite" parent="grabber/bar_shape"]
position = Vector2( 0, 1 )
texture = ExtResource( 3 )

[node name="left_pincer_groove_joint" type="GrooveJoint2D" parent="grabber/bar_shape"]
visible = false
position = Vector2( -16, 19 )
rotation = -1.5708
node_a = NodePath("../..")
node_b = NodePath("../../left_pincer")
length = 18.0
initial_offset = 1.0

[node name="left_pincer_groove_joint2" type="GrooveJoint2D" parent="grabber/bar_shape"]
visible = false
position = Vector2( -16, -2 )
rotation = -1.5708
node_a = NodePath("../..")
node_b = NodePath("../../left_pincer")
length = 18.0
initial_offset = 1.0

[node name="right_pincer_groove_joint" type="GrooveJoint2D" parent="grabber/bar_shape"]
visible = false
position = Vector2( 16, 19 )
rotation = 1.5708
node_a = NodePath("../..")
node_b = NodePath("../../right_pincer")
length = 18.0
initial_offset = 1.0

[node name="right_pincer_groove_joint2" type="GrooveJoint2D" parent="grabber/bar_shape"]
visible = false
position = Vector2( 16, -2 )
rotation = 1.5708
node_a = NodePath("../..")
node_b = NodePath("../../right_pincer")
length = 18.0
initial_offset = 1.0

[node name="left_pincer" type="RigidBody2D" parent="grabber"]
position = Vector2( -15, 12 )
collision_mask = 18
mass = 0.05
physics_material_override = SubResource( 2 )
continuous_cd = 2
contact_monitor = true
can_sleep = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="grabber/left_pincer"]
shape = SubResource( 3 )

[node name="pincer" type="Sprite" parent="grabber/left_pincer"]
position = Vector2( -8, -16 )
texture = ExtResource( 4 )
centered = false

[node name="right_pincer" type="RigidBody2D" parent="grabber"]
position = Vector2( 15, 12 )
collision_mask = 18
mass = 0.05
physics_material_override = SubResource( 2 )
continuous_cd = 2
contact_monitor = true
can_sleep = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="grabber/right_pincer"]
shape = SubResource( 3 )

[node name="pincer2" type="Sprite" parent="grabber/right_pincer"]
position = Vector2( -7, -16 )
texture = ExtResource( 4 )
centered = false
flip_h = true

[node name="left_pincer_top_spring" type="DampedSpringJoint2D" parent="grabber"]
visible = false
position = Vector2( 2, 4 )
rotation = 1.5708
node_a = NodePath("..")
node_b = NodePath("../left_pincer")
length = 16.0
rest_length = 16.0
stiffness = 15.0
damping = 0.2

[node name="right_pincer_top_spring" type="DampedSpringJoint2D" parent="grabber"]
visible = false
position = Vector2( -2, 4 )
rotation = -1.5708
node_a = NodePath("..")
node_b = NodePath("../right_pincer")
length = 16.0
rest_length = 16.0
stiffness = 15.0
damping = 0.2

[node name="left_pincer_bottom_spring" type="DampedSpringJoint2D" parent="grabber"]
visible = false
position = Vector2( 2, 30 )
rotation = 1.5708
node_a = NodePath("..")
node_b = NodePath(".")
length = 16.0
rest_length = 16.0
stiffness = 15.0
damping = 0.2

[node name="right_pincer_bottom_spring" type="DampedSpringJoint2D" parent="grabber"]
visible = false
position = Vector2( -2, 31 )
rotation = -1.5708
node_a = NodePath("..")
node_b = NodePath(".")
length = 16.0
rest_length = 16.0
stiffness = 15.0
damping = 0.2

[node name="crane_hoist" parent="." instance=ExtResource( 5 )]
position = Vector2( 2, -91 )
mode = 3

[node name="chain" parent="." instance=ExtResource( 6 )]
position = Vector2( 0, -87 )
rotation = 1.5708
node_a = NodePath("../crane_hoist/winch")
node_b = NodePath("../grabber")
length = 33

[node name="box_1" parent="." instance=ExtResource( 7 )]
position = Vector2( 0, 105 )
